CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/Consorcio_Org__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Se agrega validación por producto y acción.</description>
    <label>Consorcio Org</label>
</CustomObject>