CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Cambiar_Propietario_sales__c.field-meta.xml
<CustomField>
    <fullName>Cambiar_Propietario_sales__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permite cambio de propietario en oportunidad.</description>
    <label>Cambiar Propietario</label>
    <type>Checkbox</type>
</CustomField>