CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/consumo_sales__c.field-meta.xml
<CustomField>
    <fullName>consumo_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumo</label>
    <type>Checkbox</type>
</CustomField>