CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Envio_Solicitud_Backend__c.field-meta.xml
<CustomField>
    <fullName>Envio_Solicitud_Backend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para validar si el perfil tiene permitido enviar solicitud al backend</description>
    <label>Envío Solicitud Backend</label>
    <type>Checkbox</type>
</CustomField>