CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Etapa_Activacion_sales__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Activacion_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado por everis para controlar perfiles que pueden avanzar a etapa Activación en Oportunidad de Banca Hipotecario.</description>
    <label>Etapa Activación</label>
    <type>Checkbox</type>
</CustomField>