CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Etapa_Cierre_Ganada_sales__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Cierre_Ganada_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado por everis para controlar perfiles que pueden cerrar una Oportunidad Ganada.</description>
    <label>Etapa Cierre Ganada</label>
    <type>Checkbox</type>
</CustomField>