CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Etapa_entrega_sales__c.field-meta.xml
<CustomField>
    <fullName>Etapa_entrega_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado por everis que controla perfiles que puede avanzar a etapa Entrega en Oportunidad de Banca Plan plus.</description>
    <label>Etapa Entrega</label>
    <type>Checkbox</type>
</CustomField>