CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Etapa_Evaluacion_sales__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Evaluacion_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado por everis para controlar perfiles que pueden acceder a la etapa Evaluación en la Oportunidad de Banca Hipotecario.</description>
    <label>Etapa Evaluación</label>
    <type>Checkbox</type>
</CustomField>