CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Etapa_Inscripcion_sales__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Inscripcion_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado por everis que controla perfiles que puede avanzar a etapa Inscripción en Oportunidad de Banca Hipotecario.</description>
    <label>Etapa Inscripción</label>
    <type>Checkbox</type>
</CustomField>