CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Etapa_Recopilacion_sales__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Recopilacion_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado por everis para controlar los perfiles que pueden avanzar a la etapa Recopilación en la Oportunidad de Banca Hipotecario.</description>
    <label>Etapa Recopilación</label>
    <type>Checkbox</type>
</CustomField>