CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Etapa_Simulacion_sales__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Simulacion_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que permite regular perfiles que pueden avanzar a etapa Simulación en Oportunidad de Banca Hipotecario.</description>
    <label>Etapa Simulación</label>
    <type>Checkbox</type>
</CustomField>