CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Hogar_sales__c.field-meta.xml
<CustomField>
    <fullName>Hogar_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si el perfil puede trabajar sobre el producto indicado.</description>
    <label>Hogar</label>
    <type>Checkbox</type>
</CustomField>