CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/leads_sales__c.field-meta.xml
<CustomField>
    <fullName>leads_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar los perfiles que pueden cambiar el estado de un lead.</description>
    <label>Leads</label>
    <type>Checkbox</type>
</CustomField>