CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Participantes_Sales__c.field-meta.xml
<CustomField>
    <fullName>Participantes_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para configurar que perfiles pueden trabajar en el objeto Participante_sales</description>
    <label>Participantes</label>
    <type>Checkbox</type>
</CustomField>