CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/perfiles_ejecutivo_ventas__c.field-meta.xml
<CustomField>
    <fullName>perfiles_ejecutivo_ventas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perfiles que corresponden a Ejecutivo Ventas</description>
    <inlineHelpText>Perfiles que corresponden a Ejecutivo Ventas</inlineHelpText>
    <label>Perfiles_Ejecutivo_Ventas</label>
    <type>Checkbox</type>
</CustomField>