CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/perfiles_jefe_ventas__c.field-meta.xml
<CustomField>
    <fullName>perfiles_jefe_ventas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aqui irán los perfiles asociados a Perfil de jefe de ventas</description>
    <inlineHelpText>Aqui irán los perfiles asociados a Perfil de jefe de ventas</inlineHelpText>
    <label>Perfiles_Jefe_Ventas</label>
    <type>Checkbox</type>
</CustomField>