CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Referir_sales__c.field-meta.xml
<CustomField>
    <fullName>Referir_sales__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Valida si el perfil puede trabajar sobre el producto indicado.</description>
    <label>Referir</label>
    <type>Checkbox</type>
</CustomField>