CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Sales_project__c.field-meta.xml
<CustomField>
    <fullName>Sales_project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Todo perfil que se encuentre en está configuración se le gatillará funcionalidades exclusivas de SALES CLOUD PROJECT</description>
    <label>Sales project</label>
    <type>Checkbox</type>
</CustomField>