CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Sincronizar_sales__c.field-meta.xml
<CustomField>
    <fullName>Sincronizar_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si el perfil puede sincronizar el presupuesto por producto.</description>
    <label>Sincronizar</label>
    <type>Checkbox</type>
</CustomField>