CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/fields/Validation_rules__c.field-meta.xml
<CustomField>
    <fullName>Validation_rules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Evitar validation rules</description>
    <label>Validation rules</label>
    <type>Checkbox</type>
</CustomField>