CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>leads_sales__c</columns>
    <columns>Hogar_sales__c</columns>
    <columns>Etapa_Revision_sales__c</columns>
    <columns>Hipotecario_sales__c</columns>
    <columns>PPlus_sales__c</columns>
    <columns>Referir_sales__c</columns>
    <columns>Cambiar_Propietario_sales__c</columns>
    <columns>Sincronizar_sales__c</columns>
    <columns>Sales_project__c</columns>
    <columns>Validation_rules__c</columns>
    <columns>Participantes_Sales__c</columns>
    <columns>Etapa_Simulacion_sales__c</columns>
    <columns>Etapa_Recopilacion_sales__c</columns>
    <columns>Etapa_Activacion_sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>