CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/listViews/Auto.listView-meta.xml
<ListView>
    <fullName>Auto</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Auto_sales__c</columns>
    <columns>Cambiar_Propietario_sales__c</columns>
    <columns>Referir_sales__c</columns>
    <columns>Sales_project__c</columns>
    <columns>Sincronizar_sales__c</columns>
    <columns>Validation_rules__c</columns>
    <columns>Etapa_Evaluacion_sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>Auto</label>
</ListView>