CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org__c/listViews/Plan_Plus.listView-meta.xml
<ListView>
    <fullName>Plan_Plus</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>PPlus_sales__c</columns>
    <columns>Sales_project__c</columns>
    <columns>Validation_rules__c</columns>
    <columns>Participantes_Sales__c</columns>
    <columns>Referir_sales__c</columns>
    <columns>Cambiar_Propietario_sales__c</columns>
    <columns>Sincronizar_sales__c</columns>
    <columns>Etapa_Simulacion_sales__c</columns>
    <columns>Etapa_Recopilacion_sales__c</columns>
    <columns>Etapa_Revision_sales__c</columns>
    <columns>Etapa_Evaluacion_sales__c</columns>
    <columns>Etapa_entrega_sales__c</columns>
    <columns>Etapa_Activacion_sales__c</columns>
    <columns>Etapa_Cierre_Ganada_sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>Plan Plus</label>
</ListView>